--- a/memento.html
+++ b/memento.html
@@ -1,5 +1,16 @@
-<!DOCTYPE html><html lang="fr"><head><meta charset="utf-8" /><title>Memento Vivo</title><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script><STYLE type="text/css">
-body{background:#666;}
-html,body,div,span,h1,p,a,img,input,select{margin:0;padding:0;border:0;font-weight:inherit;font-style:inherit;font-size:100%;font-family:inherit;vertical-align:baseline;font-family:helvetica,arial,verdana;}a img{border:none;}select{margin:6px;}h4{display:inline;line-height:110%;letter-spacing:0.07em;font-size:100%;}
+<!DOCTYPE html><html lang="fr"><head><meta charset="utf-8" /><title>Memento</title><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script><STYLE type="text/css">
+body{background:#7C8BA2;}
+html,body,div,span,h1,p,a,img,input,select,textarea{margin:0;padding:0;border:0;font-weight:inherit;font-style:inherit;font-size:100%;font-family:inherit;vertical-align:baseline;font-family:font-family:Georgia,Times New Roman,Times,serif;}
+#a{width:180px;background:#8A9AB2;position:fixed;top:0;Bottom:0;-moz-box-shadow:0 4px 16px #469;-webkit-box-shadow:0 4px 16px #469;box-shadow:0 4px 16px #469;}#a h1{color:#fff;margin:16px;line-height:110%;letter-spacing:0.1em;font-size:110%;text-shadow:0 1px 0.5px #009;}
+#m{margin:20px 10px;}#m input{margin: 10px 0;}#m span{color:#224;}
+.b{float:left;color:#1400D8;background:#97A8C1;width:60px;padding:5px 9px 3px 7px;margin-left:6px;text-align:center;border:1px solid #424B56;}
+.b:hover{color:#2400E8;background:#a7b8d1;border:1px solid #626B76;}
+.b:active{color:#0400C8;background:#7C8BA2;border:1px solid #7C8BA2;}
+#r{padding: 28px 0 26px 192px;background:#7C8BA2;}
+#f{width:600px;height:100%;margin:0 auto;background:#F5F5F5;-moz-box-shadow:0 4px 16px #449;-webkit-box-shadow:0 4px 16px #449;box-shadow:0 4px 16px #449;}
+textarea{font-size:85%;font-family:Courier New,Courier,monospace;white-space:nowrap;overflow-x:auto;overflow-y:hidden;height:100%;}#t{width:580px;padding:20px 10px;background:#F5F5F5;border-width:0;color:#000;}
 
-</STYLE><script src="/memento.js"></script></head><body></body>
+</STYLE><script src="/memento.js"></script></head><body>
+<div id="r"><form id="f"><textarea id="t" cols="" rows="65"></textarea></form></div>
+<div id="a"><h1>== Memento ==</h1><div id="m"><br/></div><a href="/"><div id="l" class="b">Charger</div></a><a href="/"><div id="s" class="b">Sauver</div></a></div>		
+</body>
